--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Intel-IoT-Club/smart_grocery_backend.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Intel-IoT-Club/smart_grocery_backend/issues"
+  },
+  "homepage": "https://github.com/Intel-IoT-Club/smart_grocery_backend#readme",
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
